--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -314,15 +314,15 @@
 
     <div class="input-group">
         <label for="startDate1">Start:</label>
-        <input type="date" id="startDate1" value="2025-28-04">
+        <input type="date" id="startDate1" value="2025-04-26">
     </div>
     <div class="input-group">
         <label for="endDate1">Eid:</label>
-        <input type="date" id="endDate1" value="2025-06-05">
+        <input type="date" id="endDate1" value="2025-05-06">
     </div>
     <div class="input-group">
         <label for="startDate2">Start:</label>
-        <input type="date" id="startDate2" value="2025-28-04">
+        <input type="date" id="startDate2" value="2025-04-26">
     </div>
     <div class="input-group">
         <label for="endDate2">Today:</label>
@@ -334,7 +334,7 @@
     </div>
     <div class="input-group">
         <label for="endDate3">Eid:</label>
-        <input type="date" id="endDate3" value="2025-06-05">
+        <input type="date" id="endDate3" value="2025-05-06">
     </div>
 
     <button onclick="calculateWeeks()">Calculate Weeks</button>
@@ -450,7 +450,7 @@
         output += "</tbody></table><br><hr>";
 
 
-        const fixedStartDate = new Date('2024-07-08'); // 21-09-2024
+        const fixedStartDate = new Date('2025-04-28'); // Start
       const today = new Date(); 
       const daysDiff = Math.floor((today - fixedStartDate) / (1000 * 60 * 60 * 24));
 
