--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -301,7 +301,7 @@
 
     <select id="folderSelect"></select>
         
-     <div class="week">Start ( 28-04-2025 ) থেকে Eid ( 06-06-2025 ) পর্যন্ত মোট<strong id="result1"></strong> সপ্তাহ, তন্মধ্যে অতিবাহিত হয়েছে <strong id="result2"></strong> সপ্তাহ , আর Eid পর্যন্ত বাকি আছে  <strong id="result3"></strong> সপ্তাহ।</div>
+     <div class="week">Start ( 01-07-2025 ) থেকে Eid ( 20-03-2025 ) পর্যন্ত মোট<strong id="result1"></strong> সপ্তাহ, তন্মধ্যে অতিবাহিত হয়েছে <strong id="result2"></strong> সপ্তাহ , আর Eid পর্যন্ত বাকি আছে  <strong id="result3"></strong> সপ্তাহ।</div>
      
     <div id="displayArea"></div>
     <div style="text-align: right;" >
@@ -405,7 +405,7 @@
       text6: text6 // Include text6 in the data object
     };
 
-    database.ref("Nazrul/5, Qurbani's 2025").push(data)
+    database.ref("Nazrul/6, Ramadan's 2025-26").push(data)
       .then(() => {
         Swal.fire({
           icon: 'success',
