--- a/nazrul-islam/index.html
+++ b/nazrul-islam/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+pet<!DOCTYPE html>
 <html>
 <head>
   <title>MD NAZRUL ISLAM</title>
@@ -450,7 +450,7 @@
         output += "</tbody></table><br><hr>";
 
 
-        const fixedStartDate = new Date('2025-04-26'); // Start
+        const fixedStartDate = new Date('2025-07-01'); // Start
       const today = new Date(); 
       const daysDiff = Math.floor((today - fixedStartDate) / (1000 * 60 * 60 * 24));
 
